# SFS

./: CMakeLists.txt  README.md  test.txt
src/: counting.h  generateSFS.cpp  main.cpp  partitionCounting.h  partitionDescriptor.h  singleCountSFS.cpp  utils.h
